@@ -1,3 +1,9 @@
+2014-06-18  Ramon Casero  <rcasero@gmail.com>
+
+	* matlab/ManifoldToolbox/tri_ccqp_smacof_nofold_sph_pip.m (0.2.3)
+
+	- Fix bug. Bad syntax for max().
+
 2014-06-17  Ramon Casero  <rcasero@gmail.com>
 
 	* matlab/ManifoldToolbox/tri_ccqp_smacof_nofold_sph_pip.m (0.2.2)
